style(app.css): add overflow properties to html for improved scrolling behavior and prevent overscroll

--- a/apps/mini/app/(app)/app.css
+++ b/apps/mini/app/(app)/app.css
@@ -54,6 +54,11 @@
   }
 }
 
+html {
+  overflow: hidden !important;
+  overscroll-behavior: none !important;
+}
+
 body {
   /* height: 100vh !important; */
   display: flex;
